Fix font sizes through index.html. Fix font line height. Fix containers padding and margin. Hide second container left column on mobile view. Change images for mobile view (three small cards). Style thumbnails for mobile view. Hide last container left column on mobile view. Make "Start learning" section background white on mobile platform.

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -2,9 +2,14 @@
 html {
   /*font-family: helvetica*/
   font-size: 16px;
+  font-weight: lighter;
+  color: #4A4A4A;
 }
 
 /*Background colors*/
+.bgDarker {
+  background-color: #4A4A4A;
+}
 .bgDark {
   background-color: #D8D8D8;
 }
@@ -19,6 +24,14 @@ html {
 .navbar {
   border-radius: 0;
   border: 0;
+  margin: 0;
+  font-weight: normal;
+}
+
+.navbar-toggle {
+  float: none;
+  border: 0;
+  margin: 0;
 }
 
 /*Fix navbar height and text vertical alignment for
@@ -36,13 +49,6 @@ larger displays*/
     margin-right: 1rem;
   }
 }
-
-.navbar-toggle {
-  float: none;
-  border: 0;
-  margin: 0;
-}
-
 
 #header {
   padding:0;
@@ -77,6 +83,12 @@ larger displays*/
   }
 }
 
+@media (max-width: 992px) {
+  .verticalAlign {
+    height: auto;
+  }
+}
+
 .container {
   padding: 1.8rem;
 }
@@ -88,6 +100,12 @@ larger displays*/
 
 .thumbnail .caption {
   min-height: 150px;
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+
+.thumbnail .caption p {
+  font-weight: 300;
 }
 
 .horizCardPad {
@@ -97,16 +115,68 @@ larger displays*/
   padding: 0rem 1rem 1rem 1rem;
 }
 
+h1 {
+  font-weight: 900;
+}
 
+h2 {
+  font-weight: 900;
+  margin-top: 0rem;
+  margin-bottom: 1.5rem;
+}
 
+h3 {
+  margin: 1.5rem;
+  letter-spacing: 0.12rem;
+}
 
-@media (max-width: 768px) {
+h5 {
+  font-weight: lighter;
+  letter-spacing: 0.08rem;
+}
 
+.lead {
+  font-size: 0.9rem;
+  letter-spacing: 0.05rem;
+}
+
+.quote {
+  font-size: 0.7rem;
+  font-weight: 300;
+}
+
+#section1 p {
+  font-weight: normal;
+}
+
+#section1 .btn {
+  /*font-weight: lighter;*/
+  color: #FFFFFF;
+  letter-spacing: 0.1rem;
+
+}
+
+#section1 .btn:hover {
+  /*font-weight: lighter;*/
+  background-color: #4ABE4A;
+}
+
+#section2 h2 {
+  margin-top: 1.5rem;
+}
+
+.mobileViewSection3Margin {
+  margin: 0.2rem;
+}
+
+@media (max-width: 992px) {
+  #section3 {
+    background-color: #FFFFFF;
+  }
+}
+
+@media (max-width: 992px) {
   footer {
     text-align: center;
-  }
-
-  .removeOnShrink  {
-    display: none;
   }
 }
